--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <div>
         <button id="snack2">Snack 2</button>
     </div>
+    <div>
+        <button id="snack3">Snack 3</button>
+    </div>
+    <div>
+        <button id="snack4">Snack 4</button>
+    </div>
+
 
     <script src="./assets/js/main.js"></script>
 </body>
